--- a/_publications/CESC'22 11.1
+++ b/_publications/CESC'22 11.1
@@ -14,7 +14,6 @@ In this paper, we study a large set of 502 unique exploitable bugs from 158 real
 No download link yet
 #[Download paper here](http://academicpages.github.io/files/paper1.pdf)
 
-Recommended citation: No citation yet  
-#Your Name, You. (2009). "Paper Title Number 1." <i>Journal 1</i>. 1(1). 
+Recommended citation: No citation yet #Your Name, You. (2009). "Paper Title Number 1." <i>Journal 1</i>. 1(1).   
 
 
