--- a/_publications/CESC'22 11.1
+++ b/_publications/CESC'22 11.1
@@ -7,13 +7,11 @@ date: 2022-11-01
 venue: 'CESC 22'
 paperurl: 'https://github.com/NioTheFirst/Brian-Zhang-.github.io/blob/master/files/CESC_final.pdf'
 citation: No citation yet
-#'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'
 ---
 In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.
 
 No download link yet
-#[Download paper here](http://academicpages.github.io/files/paper1.pdf)
 
-Recommended citation: No citation yet #Your Name, You. (2009). "Paper Title Number 1." <i>Journal 1</i>. 1(1).   
+Recommended citation: No citation yet   
 
 
