--- a/_publications/CESC'22 11.1
+++ b/_publications/CESC'22 11.1
@@ -1,11 +1,11 @@
 ---
 title: "A Systematic Study of Recent Smart Contract Vulnerabilities"
 collection: publications
-permalink: https://github.com/NioTheFirst/Brian-Zhang-.github.io/blob/f968cd0b94f8adda6e8c3cbcbbab5427a04ee42a/files/CESC_final.pdf
+permalink: /blob/f968cd0b94f8adda6e8c3cbcbbab5427a04ee42a/files/CESC_final.pdf
 excerpt: ' In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.'
 date: 2022-11-01
 venue: 'CESC 22'
-paperurl: 'https://github.com/NioTheFirst/Brian-Zhang-.github.io/blob/master/files/CESC_final.pdf'
+paperurl: ''
 citation: No citation yet
 ---
 In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.
