--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -1,7 +1,7 @@
 ---
 title: "A Systematic Study of Recent Smart Contract Vulnerabilities"
 collection: publications
-permalink: https://github.com/NioTheFirst/Brian-Zhang-.github.io/blob/1d8c06394ec6f09ad41d05455faae893b5ac3ef6/files/CESC_final.pdf
+permalink: github.com/NioTheFirst/Brian-Zhang-.github.io/blob/94b15307ab1ae758d40a535e9e8320ba7fa91a02/talkmap.py
 excerpt: ' In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.'
 date: 2022-11-01
 venue: 'CESC 22'
