--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -12,6 +12,8 @@ In this paper, we study a large set of 502 unique exploitable bugs from 158 real
 
 [Paper](http://NioTheFirst.github.io/Brian-Zhang-.github.io/files/paper1.pdf)
 
+<embed src="http://NioTheFirst.github.io/Brian-Zhang-.github.io/files/paper1.pdf" type="application/pdf" width="600px" height="500px" />
+
 No download link yet
 
   
