--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -10,7 +10,7 @@ citation: No citation yet
 ---
 In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.
 
-[Paper](http://NioTheFirst.github.io/files/paper1.pdf)
+[Paper](http://NioTheFirst.github.io/files/CESC_final.pdf)
 
 <embed src="http://NioTheFirst.github.io/files/paper1.pdf" type="application/pdf" width="600px" height="500px" />
 
