--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -1,7 +1,7 @@
 ---
 title: "A Systematic Study of Recent Smart Contract Vulnerabilities"
 collection: publications
-permalink: /files/CESC_final
+permalink: /files/CESC_final.pdf
 excerpt: ' In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.'
 date: 2022-11-01
 venue: 'CESC 22'
