--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -2,7 +2,10 @@
 title: "A Systematic Study of Recent Smart Contract Vulnerabilities"
 collection: publications
 permalink: /CESC_final.pdf
-excerpt: ' In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.'
+excerpt: ' In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.
+
+Video: https://NioTheFirst.github.io/CescTalkMyPart_Trim.mp4
+'
 date: 2022-11-01
 venue: 'CESC 22'
 paperurl: ''
@@ -11,6 +14,8 @@ citation: No citation yet
 In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.
 
 [Paper](http://NioTheFirst.github.io/CESC_final.pdf)
+
+https://NioTheFirst.github.io/CescTalkMyPart_Trim.mp4
 
 
 No download link yet
