--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -4,6 +4,7 @@ collection: publications
 permalink: /CESC_final.pdf
 excerpt: ' In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.'
 slides: https://NioTheFirst.github.io/CESC_Slides.pdf
+poster: https://NioTheFirst.github.io/poster.pdf
 video: https://NioTheFirst.github.io/CescTalkMyPart_Trim.mp4
 date: 2022-11-01
 venue: 'CESC 22'
