--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -13,7 +13,7 @@ citation: No citation yet
 ---
 In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.
 
-[Paper](http://NioTheFirst.github.io/CESC_final.pdf)
+[Paper](http://NioTheFirst.github.io/CESC22.pdf)
 
 CESC_final.pdf
 
