--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -1,7 +1,8 @@
 ---
 title: "A Systematic Study of Recent Smart Contract Vulnerabilities"
 collection: publications
-permalink: /CESC_final.pdf
+permalink: /CESC22.pdf
+url: http://NioTheFirst.github.io/CESC22.pdf
 excerpt: ' In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.'
 slides: https://NioTheFirst.github.io/CESC_Slides.pdf
 poster: https://NioTheFirst.github.io/poster.pdf
