--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -2,7 +2,7 @@
 title: "A Systematic Study of Recent Smart Contract Vulnerabilities"
 collection: publications
 permalink: /CESC22.pdf
-url: http://NioTheFirst.github.io/CESC22.pdf
+url: https://NioTheFirst.github.io/CESC22.pdf
 excerpt: ' In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.'
 slides: https://NioTheFirst.github.io/CESC_Slides.pdf
 poster: https://NioTheFirst.github.io/poster.pdf
@@ -14,7 +14,7 @@ citation: No citation yet
 ---
 In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.
 
-[Paper](http://NioTheFirst.github.io/CESC22.pdf)
+[Paper](https://NioTheFirst.github.io/CESC22.pdf)
 
 CESC_final.pdf
 
