--- a/_publications/ICSE'23 12.8
+++ b/_publications/ICSE'23 12.8
@@ -9,6 +9,7 @@ slides:
 video:
 venue: 'ICSE 23'
 paperurl: ''
+authors: ' Zhuo Zhang, Brian Zhang, Wen Xu, Zhiqiang Lin'
 citation: No citation yet
 ---
 No link yet 
