--- a/_publications/ICSE'23 12.8
+++ b/_publications/ICSE'23 12.8
@@ -1,5 +1,5 @@
 ---
-title: Demystifying Exploitable Bugs in Smart Contracts"
+title: Demystifying Exploitable Bugs in Smart Contracts
 collection: publications
 permalink: 
 burl: 
