--- a/_publications/ICSE'23 12.8
+++ b/_publications/ICSE'23 12.8
@@ -7,7 +7,7 @@ excerpt:
 date: 2022-12-08
 slides: 
 video:
-venue: 'ICSE 23'
+venue: 'International Conference on Software Engineering (ICSE)'
 paperurl: ''
 authors: ' Zhuo Zhang, Brian Zhang, Wen Xu, Zhiqiang Lin'
 citation: No citation yet
