--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -8,7 +8,7 @@ slides: https://NioTheFirst.github.io/CESC_Slides.pdf
 poster: https://NioTheFirst.github.io/poster.pdf
 video: https://NioTheFirst.github.io/CescTalkMyPart_Trim.mp4
 date: 2022-11-01
-venue: 'CESC 22'
+venue: 'Crypto Economics Security Conference (CESC)'
 paperurl: ''
 authors: ' Zhuo Zhang (*), Brian Zhang (*), Wen Xu, Zhiqiang Lin '
 citation: No citation yet
