--- a/_publications/CESC'22 11.1.md
+++ b/_publications/CESC'22 11.1.md
@@ -10,7 +10,7 @@ video: https://NioTheFirst.github.io/CescTalkMyPart_Trim.mp4
 date: 2022-11-01
 venue: 'Crypto Economics Security Conference (CESC)'
 paperurl: ''
-authors: ' Zhuo Zhang (*), Brian Zhang (*), Wen Xu, Zhiqiang Lin '
+authors: ' Zhuo Zhang (co-first), Brian Zhang (co-first), Wen Xu, Zhiqiang Lin '
 citation: No citation yet
 ---
 In this paper, we study a large set of 502 unique exploitable bugs from 158 real-world contracts reported/exploited in the past year or so and aim to summarize their root causes and distributions.
