--- a/_publications/ICSE'23 12.8
+++ b/_publications/ICSE'23 12.8
@@ -14,6 +14,7 @@ citation: No citation yet
 ---
 [Paper](https://NioTheFirst.github.io/ICSE23.pdf)
 
+This is an __Extended__ version of our CESC paper
 
 
 No download link yet
